[gd_scene load_steps=5 format=3 uid="uid://dqn5br55m7y75"]

[ext_resource type="Script" path="res://scripts/select_level.gd" id="1_f4psx"]
[ext_resource type="Texture2D" uid="uid://b8nyaebgxm1o2" path="res://assets/backgroud/MainMenu_BG.png" id="2_csa5r"]
[ext_resource type="FontFile" uid="uid://csknbgqrv8qic" path="res://Symtext.ttf" id="3_swxbd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hksmd"]
texture = ExtResource("2_csa5r")

[node name="SelectLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f4psx")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hksmd")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.5
offset_top = 20.0
offset_right = 112.5
offset_bottom = 59.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_swxbd")
theme_override_font_sizes/font_size = 26
text = "SELECT LEVEL"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -33.0
offset_right = 97.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="ButtonLevel1" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "Level 1"

[node name="ButtonLevel2" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "Level 2"

[node name="ButtonLevel3" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "Level 3"

[node name="ButtonLevel4" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "Level 4"

[node name="ButtonLevel5" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "Level 5"

[node name="ButtonLevel6" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "Level 6"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -50.0
offset_right = 60.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="GridContainer/ButtonLevel1" to="." method="_on_button_level_1_pressed"]
[connection signal="pressed" from="GridContainer/ButtonLevel2" to="." method="_on_button_level_2_pressed"]
[connection signal="pressed" from="GridContainer/ButtonLevel3" to="." method="_on_button_level_3_pressed"]
[connection signal="pressed" from="GridContainer/ButtonLevel4" to="." method="_on_button_level_4_pressed"]
[connection signal="pressed" from="GridContainer/ButtonLevel5" to="." method="_on_button_level_5_pressed"]
[connection signal="pressed" from="GridContainer/ButtonLevel6" to="." method="_on_button_level_6_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
